# bluebot

./: .gitignore  .gitmodules  Dockerfile  README.md  ros_entrypoint.sh  start_stack.sh
3d_stl/: Buck Mount.stl  Camera Mount.stl  Camera deck.stl  Compute deck.stl  IMU Box.stl  Lidar Deck.stl  Motor Deck.stl  Power Switch Housing & Charge Port.stl  README.md  Stand-offs.stl  WIFI Mount.stl
docs/stack_diagrams/: README.md  master_stack_diagram.mmd  start_map_stack.mmd  start_nav_stack.mmd
rviz/: my_house_map_explore.rviz  my_house_nav.rviz  start-rviz
scripts/: README_bluebot.md  ROS2_STACK_FLOW.md  bluebot.sh  isaac_ros_vslam_setup.sh  my_robot.urdf  my_robot_parsed.urdf  object_avoidance_start.sh  ros-base  set-pose  start-foxglove.sh  start-teleop.sh  start_lidar_camera_jetson.sh  start_lidar_jetson.sh  validation.sh  vslam_container_start.sh
scripts/foxglove_layouts/: foxglove_layout_jetson_full.json  foxglove_layout_jetson_minimal.json
scripts/imu/YbImuLib/YbImuLib/: YbImuSerialLib.py
src/isaac_nav2_pose_bridge/: package.xml  setup.cfg  setup.py
src/isaac_nav2_pose_bridge/isaac_nav2_pose_bridge/: isaac_to_nav2_pose.py
src/isaac_nav2_pose_bridge/launch/: isaac_grid_localization_to_nav2.launch.py
src/isaac_ros_occupancy_grid_localizer/data/rosbags/flatscan/: metadata.yaml
src/isaac_ros_pointcloud_utils/data/rosbags/flatscan/: flatscan_0.db3  metadata.yaml
src/isaac_ros_pointcloud_utils/data/rosbags/laserscan/: laserscan_0.db3  metadata.yaml
src/isaac_ros_pointcloud_utils/data/rosbags/pointcloud/: metadata.yaml
src/lidar_launch/: package.xml  setup.py
src/lidar_launch/launch/: lidar_with_tf.launch.py
src/serial_diff_drive_hw/: package.xml  setup.cfg  setup.py
src/serial_diff_drive_hw/config/: diff_drive.yaml  explore_lite_params.yaml  nav2_map_explore_params.yaml  nav2_mapping_params.yaml  nav2_navigation_params.yaml  nvblox_bridge.yaml  robot_localization_ekf.yaml
src/serial_diff_drive_hw/launch/: bringup.launch.py  isaac_ros_visual_slam_existing_realsense.launch.py  isaac_ros_visual_slam_existing_realsense_nitros.launch.py  mapping_job.launch.py  nvblox_bridge.launch.py  state_estimation.launch.py
src/serial_diff_drive_hw/serial_diff_drive_hw/: cmd_vel_safety_gate.py  drop_detector_node.py  foxglove_waypoint_bridge.py  serial_diff_drive_hw.py
src/serial_diff_drive_hw/urdf/: serial_diff_drive_hw.urdf
src/yb_a471_driver/: package.xml  setup.py
src/yb_a471_driver/yb_a471_driver/: imu_node.py
