<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_diff_drive_hw</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hailey@todo.todo">hailey</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>serial_diff_drive_hw_cpp</depend>
  <depend>isaac_ros_visual_slam</depend>
  <depend>isaac_ros_image_proc</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_localization</depend>
  <depend>tf2_ros</depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
